Fix right margin on mobile : grid had margin (found out after inspecting elements with unchecking overflow-x: hidden on developer tool)

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-html {
-  margin: 0;
-  padding: 0;
-}
 body {
   margin: 0;
   padding: 0;
